log/2022-03-24T15:03:38+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-Extra ][0m
Autotest: Begin at Thu Mar 24 15:03:38 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
readelf.c: In function 'readelf':
readelf.c:96:83: error: expected ')' before ';' token
   96 |       printf ("Overlay at page va : 0x%x\n", ROUND(phdr1->p_vaddr, phdr1->p_align);
      |                                                                                   ^
readelf.c:96:40: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'long unsigned int' [-Wformat=]
   96 |       printf ("Overlay at page va : 0x%x\n", ROUND(phdr1->p_vaddr, phdr1->p_align);
      |                                       ~^
      |                                        |
      |                                        unsigned int
      |                                       %lx
readelf.c:96:84: error: expected ';' before '}' token
   96 |       printf ("Overlay at page va : 0x%x\n", ROUND(phdr1->p_vaddr, phdr1->p_align);
      |                                                                                    ^
      |                                                                                    ;
   97 |   }
      |   ~                                                                                 
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 0 (of 100) this time. Thu Mar 24 15:03:39 CST 2022 ][0m
Autotest: End at Thu Mar 24 15:03:39 CST 2022
